
sysdir = $(datadir)/control-center/Workspace
sys_DATA = screensaver-properties.desktop 

ssdatadir = $(datadir)/control-center/.data

ssdata_DATA=\
	Qix.desktop\
	qix.png\
	Deco.desktop\
	deco.png \
	Ant.desktop \
	ant.png \
	Attraction.desktop \
	Blitspin.desktop \
	Bouboule.desktop \
	Braid.desktop \
	Bsod.desktop \
	Bubbles.desktop \
	Coral.desktop \
	Crystal.desktop \
	Cynosure.desktop \
	Decayscreen.desktop \
	Discrete.desktop \
	Distort.desktop \
	Drift.desktop \
	Epicycle.desktop \
	Fadeplot.desktop \
	Flag.desktop \
	Flame.desktop \
	Flow.desktop \
	Forest.desktop \
	Galaxy.desktop \
	Goop.desktop \
	Grav.desktop \
	Greynetic.desktop \
	Halo.desktop \
	Helix.desktop \
	Hopalong.desktop \
	Hypercube.desktop \
	Ifs.desktop \
	Imsmap.desktop \
	Interference.desktop \
	Jigsaw.desktop \
	Julia.desktop \
	Kaleidescope.desktop \
	Kumppa.desktop \
	Laser.desktop \
	Lightning.desktop \
	Lisa.desktop \
	Lissie.desktop \
	Lmorph.desktop \
	Maze.desktop \
	Moire.desktop \
	Moire2.desktop \
	Mountain.desktop \
	Munch.desktop \
	Noseguy.desktop \
	Pedal.desktop \
	Penrose.desktop \
	Pyro.desktop \
	Rd-bomb.desktop \
	Rocks.desktop \
	Rorschach.desktop \
	Rotor.desktop \
	Sierpinski.desktop \
	Slidescreen.desktop \
	Slip.desktop \
	Sphere.desktop \
	Spiral.desktop \
	Starfish.desktop \
	Strange.desktop \
	Swirl.desktop \
	Triangle.desktop \
	Truchet.desktop \
	Vines.desktop \
	Worm.desktop \
	Xjack.desktop \
	Xlyap.desktop \
	Xroger.desktop 





EXTRA_DIST= $(ssdata_DATA) screensaver-properties.desktop

