figs = \
	deskguide-fig.png			\
	deskguide-properties-tasks-fig.png	\
	deskguide-properties-advanced-fig.png	\
	deskguide-properties.png		\
	deskguide-properties-geometry-fig.png	\
	deskguide-tasklist-fig.png
docname = desk-guide_applet
lang = C
omffile = desk-guide_applet-C.omf
sgml_ents = desk-guide.sgml
include $(top_srcdir)/sgmldocs.make
dist-hook: app-dist-hook

