figs = \
	deskguide-fig.png			\
	deskguide-properties-tasks-fig.png	\
	deskguide-properties-advanced-fig.png	\
	deskguide-properties.png		\
	deskguide-properties-geometry-fig.png	\
	deskguide-tasklist-fig.png
docname = desk-guide_applet
lang = es
omffile = desk-guide_applet-es.omf
sgml_ents = desk-guide.sgml \
	authors.sgml \
	licencia-es.sgml \
	licencia-nota-es.sgml \
	license.sgml
include $(top_srcdir)/sgmldocs.make
dist-hook: app-dist-hook

